[package]
name = "arxy"
version = "0.0.1"
authors = ["Chris Chou <chhschou@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Arbitrary forward proxy"
homepage = "https://github.com/synbod/arxy"
repository = "https://github.com/synbod/arxy"
readme = "README.md"
keywords = ["proxy", "graphics"]
categories = ["command-line-utilities", "web-programming", "web-programming::http-server"]


[dependencies]
listenfd = "0.3"
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features=["openssl"] }
clap = "2.32.0"
futures = "0.3.1"
failure = "0.1.3"
url = "2.0"
serde_json = "1.0.56"
serde = "1.0.114"
